# termux-mcp

./: .env.example  .gitignore  1.sh  README.md  github-submit.sh  install-wheelhouse-offline.sh  pyproject.toml  requirements-local.txt  termux-install.sh
docs/: offline-install.zh-CN.md  project-description.zh-CN.md  tool-development.md  user-guide.zh-CN.md
examples/: custom_tools.py  math_tools.py  simple_tavily.py  workspace_stats.py
offline-pip-bundle/: SHA256SUMS
offline-pip-package/: install.sh  requirements.txt
offline-pip-package/wheelhouse/: cffi-2.0.0-cp313-cp313-android_24_arm64_v8a.whl  mcp_toolkit_server-0.1.0-py3-none-any.whl
src/mcp_toolkit/: __init__.py  server.py
src/mcp_toolkit/core/: __init__.py  config.py  http_auth.py  registry.py  security.py
src/mcp_toolkit/tools/: __init__.py  agent.py  files.py  web.py
tests/: helpers.py  test_config.py  test_server.py  test_tools.py
wheelhouse/: pydantic_core-2.46.4-cp313-cp313-android_24_arm64_v8a.whl  rpds_py-2026.5.1-cp313-cp313-android_24_arm64_v8a.whl
