[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-toolkit-server"
version = "0.1.0"
description = "An extensible Python MCP server with web search, file operation, and agent tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.9.0",
  "pydantic>=2.7",
  "starlette>=0.27",
  "uvicorn>=0.31.1",
]

[project.scripts]
mcp-toolkit = "mcp_toolkit.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_toolkit"]
